Correct text wrapping bug introduced when company logo size increased

--- a/livingstreets.css
+++ b/livingstreets.css
@@ -123,7 +123,7 @@ div#living-streets-header h1 {
 	padding-top:50px;
 }
 
-@media screen and (max-width: 518px) {
+@media screen and (max-width: 538px) {
 	/* Wrap "Living Streets Consulting" if necessary */
 	div#living-streets-header h1#company {
 		width: 200px;
